# Atlas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  docker-compose.yml  lefthook.yml  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: burst-benchmark.yml  ci.yml  codeql.yml  full-sweep.yml  janitor.yml  judge-live.yml  live-pr.yml  release.yml  simulator.yml  staleness.yml
backend/: Dockerfile
backend/atlas/: auth.py  chat_app.py  config.py  edge_app.py  label_routes.py  logging_setup.py  metrics.py  server.py
backend/atlas/adapters/: cassette_reranker.py  inmemory_graph.py  inmemory_retriever.py  label_store.py  neo4j_graph.py  openai_embedding.py  otel_tracer.py  pg_knowledge_graph.py  pgvector_retriever.py  phoenix_annotations.py  resilience.py  tei_embedding.py  trace_translation.py
backend/atlas/domain/: accounts.py  actions.py  binding.py  budget.py  cache.py  catalog.py  confirmation.py  corpus.py  degradation.py  graph_retrieval.py  guard.py  metrics.py  oracle.py  poison_corpus.py  retrieval.py  spotlight.py
backend/atlas/mcp_servers/: account_server.py  actions_server.py  catalog_server.py  hardening.py  knowledge_server.py  tool_surface.py
backend/atlas/orchestration/: agentic_rag.py  atlas_graph.py  confirm_graph.py  graph_rag.py  spike_graph.py  turn_graph.py
backend/atlas/persistence/: __init__.py  alembic.ini  checkpointer.py  env.py
backend/atlas/ports/: accounts.py  actions.py  cache.py  catalog.py  embedding.py  knowledge.py  knowledge_graph.py  reranker.py  session.py
contracts/: README.md
contracts/dataset/: schema.json  taxonomy.yaml
contracts/dataset/examples/: multi_turn_case.json  single_turn_case.json
contracts/manifest/: schema.json
contracts/manifest/examples/: benchmark_run.json
contracts/mcp_snapshots/: account.json  actions.json  catalog.json  knowledge.json
contracts/sse/: schema.json
contracts/sse/examples/: stream_error_midstream.json  stream_ok.json
contracts/trace/: freeze_evidence.json  freeze_narrowed.yaml  schema.json  span_inventory.json
contracts/trace/examples/: chat_turn.json  degraded_turn.json
corpus/registry/: core.yaml  generated_variants.yaml
corpus/rendered/corpus-0.1.1/: manifest.json
corpus/templates/: contract_terms_a.txt  device_manual_a.txt  fee_schedule_a.txt  plan_page_a.txt  plan_page_b.txt  policy_a.txt  promo_page_a.txt  troubleshooting_a.txt  troubleshooting_b.txt
docs/measurements/: sp10-ci-lanes.md  sp3-rag-spine.md  sp7-datasets-metrics.md  sp8-judge-human-loop.md  sp9-variants-matrix.md
docs/product/: README.md  account-access.md  account-actions.md  cancel-service.md  knowledge-and-policy.md  requirements.md
docs/runbooks/: burst-bringup.skeleton.md  burst-triage.skeleton.md  corpus-bump.skeleton.md  drift-and-cassettes.md  judge-recalibration.md  judge-recalibration.skeleton.md  key-rotation.skeleton.md  model-deprecation.skeleton.md  promote-production-failure.md  restore-drill.skeleton.md
frontend/: .env.example  Dockerfile  biome.json  index.html  knip.json  nginx.conf  openapi.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: env.test.ts  env.ts  main.tsx  router.tsx  styles.css
frontend/src/adjudication/: highlight.test.ts  highlight.ts  useAdjudicationStore.ts
frontend/src/api/: client.ts
frontend/src/auth/: session.tsx
frontend/src/chat/: AtlasThread.test.tsx  AtlasThread.tsx  ConfirmationCard.test.tsx  ConfirmationCard.tsx  confirmation.test.ts  confirmation.ts  runtime.ts  useChatStore.ts
frontend/src/routes/: Adjudicate.test.tsx  Adjudicate.tsx  Chat.tsx  Login.tsx  Root.tsx
frontend/src/test/: factories.ts  setup.ts
frontend/tests-e2e/: cold-open.spec.ts  confirm-write.spec.ts
indexes/corpus-0.1.1-bge-m3-03f983e0/: build_manifest.json  chunks.parquet  fingerprint.json
infra/: .sops.yaml  README.md  helmfile.yaml
infra/charts/atlas-backend/: Chart.yaml  values.yaml
infra/charts/atlas-cert/: Chart.yaml  values.yaml
infra/charts/atlas-indexes/: Chart.yaml  values.yaml
infra/charts/atlas-ingress/: Chart.yaml  values.yaml
infra/charts/atlas-jobs/: Chart.yaml  values.yaml
infra/charts/atlas-monitoring/: Chart.yaml  values.yaml
infra/charts/atlas-web/: Chart.yaml  values.yaml
infra/charts/cnpg-cluster/: Chart.yaml  values.yaml
infra/charts/otel-collector/: Chart.yaml  values.yaml
infra/charts/phoenix/: Chart.yaml  values.yaml
infra/charts/scaffold/: Chart.yaml  values.yaml
infra/charts/tei/: Chart.yaml  values.yaml
infra/environments/base/: otel-collector-values.yaml.gotmpl  values.yaml
infra/environments/burst/: values.yaml  (+1 more)
infra/observability/: otel-collector.yaml
infra/scripts/: burst-destroy.sh  burst-up.sh  hcloud-orphans.sh  k3d-smoke.sh  k3d-up.sh  k3d-verify.sh  k3d_smoke.py  record_image_digests.py  verify_tei_revisions.py
testing/harness/: ARCHITECTURE.md  __init__.py  canonical.py  cassette.py  cassette_store.py  determinism.py  gateway.py  record_atlas_cassettes.py  record_turn.py  seed_e2e_cassettes.py  stats.py  tracing.py
testing/tests/: conftest.py  test_accounts.py  test_agent_metrics.py  test_agentic_rag.py  test_artifacts.py  test_atlas_graph.py  test_atlas_graph_stage_spans.py  test_benchmark.py  test_budgets.py  test_burst_benchmark_workflow.py  test_cache.py  test_cassette_store.py  test_catalog_matches_fixture.py  test_catalog_matches_registry.py  test_changelog_gate.py  test_chat_app.py  test_chunker.py  test_ci_workflow_targets.py  test_cold_open.py  test_compose_observability.py  test_config.py  test_confirm_graph.py  test_contract_coverage.py  test_contract_dataset.py  test_contract_diff.py  test_contract_loader.py  test_contract_manifest.py  test_contract_sse.py  test_contract_trace.py  test_corpus.py  test_corpus_build.py  test_corpus_compile.py  test_corpus_expand.py  test_corpus_mutation_live.py  test_corpus_mutation_scope.py  test_corpus_mutation_selection.py  test_corpus_mutation_tracking.py  test_corpus_registry.py  test_corpus_render.py  test_corpus_verify.py  (+131 more)
(+362 files in other folders)
