[project]
name = "atlas"
version = "0.0.1"
description = "Atlas, a testable broadband support agent; the reference system for the 'Evals Are Checks, Not Tests' series."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "mcp>=1.0",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "pyjwt>=2.8",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",      # honest coverage (`task cov`)
    "hypothesis>=6.0",      # property based tests for the pure cores (stats, canonical)
]
# Provider SDKs are only needed to RECORD cassettes (live), never to replay. The hermetic PR
# lane installs neither, so a stray live call has no client to make it.
record = [
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "anthropic>=0.40",
    "openai>=1.50",
]
# Local models via Ollama, a zero key, zero egress provider for the record/eval lanes (the agent
# and/or the judge). Replay still gates; Ollama only feeds the recorder. nomic-embed-text can also
# back the RAG `embedder` port. Needs a running Ollama daemon + a pulled model.
ollama = [
    "langchain-ollama>=0.2",
]

# v0.1 uses a pythonpath layout (no install step) so the import lint layers stay physical.
# A uv workspace replaces this when backend/atlas and harness become installable packages.
[tool.pytest.ini_options]
pythonpath = ["backend", "testing/harness", "."]
asyncio_mode = "auto"
testpaths = ["testing/tests"]

# Coverage measures the CI reachable code only. The omit list is the risk based "do not test"
# decision made explicit: Protocol stubs have no behaviour to cover, the live infra and provider
# adapters run only outside the hermetic lane, and the record/seed scripts are operator entrypoints.
# Counting them would either inflate "missing" (tempting low value mock tests) or hide real gaps.
[tool.coverage.run]
branch = true
source = ["testing/harness", "backend/atlas"]
omit = [
    "testing/harness/record_turn.py",
    "testing/harness/record_atlas_cassettes.py",
    "testing/harness/seed_e2e_cassettes.py",
    "testing/harness/models.py",                          # provider factory, record/eval lanes only
    "backend/atlas/server.py",                   # ASGI entrypoint, exercised by the Playwright lane
    "backend/atlas/ports/*",                     # Protocol definitions, signatures, not behaviour
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "\\.\\.\\.",                  # Protocol method bodies (`...`)
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv]
package = false
